Bug 158681 - FILEOPEN: DOCX: Missing textbox in document
Summary: FILEOPEN: DOCX: Missing textbox in document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:24.8.0 target:24.2.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-12-13 11:37 UTC by Xisco Faulí
Modified: 2024-11-23 21:26 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparsion MSO vs LibreOffice 24.2 master (697.30 KB, image/png)
2023-12-13 11:37 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-12-13 11:37:40 UTC
Created attachment 191405 [details]
Comparsion MSO vs LibreOffice 24.2 master

Steps to reproduce:
1. Open attachment 75792 [details] from bug 61702

-> The right textbox in the second page is missing. See comparison

Reproduced in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f0fda7ad2236f478fea396a23d4f982e5fc37e68
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2023-12-13 11:38:52 UTC
Regression introduced by:

author	Justin Luth <justin.luth@collabora.com>	2023-02-15 13:54:31 -0500
committer	Justin Luth <jluth@mail.com>	2023-02-16 20:39:40 +0000
commit a9bc19c2d4a35606668aa2dcc53355651b71ee78 (patch)
tree 8cd33fb7b4c816a2d691b619df878c2c381d7139
parent 537da891fe42f432ea5d9f5e44579ae9a11722e3 (diff)
tdf#153613 writerfilter: don't always split para for shape w/ pagebreak

Bisected with: bibisect-linux64-7.6
Comment 2 Commit Notification 2023-12-13 23:31:49 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6cd6df7e0d6b0ff8150c9a95a35b17800942026a

tdf#158681 Revert "tdf#153613 writerfilter: don't always split para

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-12-14 01:56:07 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/de773a115c25c36993f5bb5a463ea5db452b5be5

tdf#158681 Revert "tdf#153613 writerfilter: don't always split para

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-12-14 08:40:56 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/773029159caf0164885015f6193774cebe898b9c

tdf#158681 Revert "tdf#153613 writerfilter: don't always split para

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.