tdf#158681 Revert "tdf#153613 writerfilter: don't always split para

... for shape w/ pagebreak"

This reverts 7.6 commit a9bc19c2d4a35606668aa2dcc53355651b71ee78.

The commit in general is probably fine. However, it fails in case
of an empty paragraph (with only anchors).
Unfortunately, there is no way of knowing ahead of time,
so either everything needs to be processed after a delay,
or else the paragraph needs to be split and then re-joined
in case it is not an empty paragraph.
Both options are extremely non-trivial - I don't know how
to do either of them.

In this case it is also the last paragraph in the document,
again something not known during import and which has
special-casing in MSO.

make CppunitTest_sw_ooxmlexport18 \
    CPPUNIT_TEST_NAME=testTdf153613_textboxAfterPgBreak3

Change-Id: I4471e216b6523032b85178d85795434694cc1e22
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160720
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>